# coordinationz

./: .gitignore  .gitmodules  LICENSE  README.md  config.ini  config.toml  config_new.toml  config_softunion.toml  config_softunion_null.toml  config_template.toml  config_template_alt.toml  config_template_softunion.toml  config_template_text_similarity.toml  config_template_union.toml  config_template_union_null.toml  config_union.toml  meson.build  pyproject.toml  simpletest.py
.github/workflows/: build-publish-pypi.yml
docs/: information.md
docs/examples/: simpleNullmodel.py
experiments/check_coordination/: check_coordination.ipynb
experiments/check_zeroes_nullmodel/: check_nullmodel_data.py  check_nullmodel_simulation.py  check_overlap.py
experiments/cohashtag/: GenerateCoHashtagNetworks_IO.py  check_activity.ipynb  check_result.ipynb  convert_to_gml.ipynb  get_hashtag_bi_partite.ipynb  sample_network.xnet  test_evaluation.ipynb
experiments/coretweet/: GenerateCoRetweetNetwork_old.py  GenerateCoRetweetNetworks_Evaluation.py  GenerateCoRetweetNetworks_INCAS.py  GenerateCoRetweetNetworks_IO.py
experiments/coretweet_user/: GenerateCoRetweetUserNetworks.py
experiments/courl/: GenerateCoURLNetworks.py
experiments/cuba/: generateNetworksEvaluation.py  generateNetworksIO.py
experiments/evaluation/: evaluation.py
experiments/exploreResults/: calculateCommunities.py  convertAshinResults.py  createTablesForExploration.py  exploreResults copy.py  exploreResults.py  saveCommunities.py  testsynthetic.py  usersSynthetic.py
experiments/nullmodelExploration/: NullModelDistributions.py
experiments/phase2b/: GenerateCoHashtagsNetworks_INCAS.py  GenerateCoRetweetNetworks_INCAS.py  GenerateCoRetweetNetworks_INCAS_TESTING.py  GenerateCoURLNetworks_INCAS.py  MergeINCASpvalue.py  PreprocessPhase2a.py  PreprocessPhase2b.py
experiments/phase2b_preprocess/: calculate_statistics.py
experiments/textsimilarity/: GenerateEmbeddings.py  GenerateFastTextSimilarityNetworks.py  GenerateTextSimilarityNetworks.py
exploration/: pvalue_exploration_05_similarity.ipynb
package/helper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/helper/.ipynb_checkpoints/: stat_helper-checkpoint.py  strategy_helper-checkpoint.py  visualization-checkpoint.py
pipeline/: indicators.py  textSimilarity.py
pipeline/merging/: merge_pvalue.py
pipeline/preprocess/: PreprocessINCAS.py  preprocessINCAS.py  preprocessIO.py
script/: main.py
script/Hashtags/notebook/: get_hashtag_bi_partite.ipynb
script/py_scripts/.ipynb_checkpoints/: clean_tweet-checkpoint.py  control_parse-checkpoint.py  coordination_score_test-checkpoint.py  get_embedding-checkpoint.py  get_multilanguage_embedding-checkpoint.py  handle_sharing-checkpoint.py  hashtag-sequence-coordination-checkpoint.py  map_columns-checkpoint.py  mention_coordination-checkpoint.py  mix_data-checkpoint.py  retweet-checkpoint.py  sychronized_action_coordination-checkpoint.py  tweet_client_coordination-checkpoint.py  username_similarity-checkpoint.py
source/: meson.build
source/coordinationz/: __init__.py  cohashtag_helper.py  communities.py  config.py  experiment_utilities.py  fastcosine.py  indicator_utilities.py  meson.build  network.py  nullmodel.old2.py  nullmodel.py  nullmodel_bark.py  nullmodel_old.py  preprocess_utilities.py  textsimilarity_helper.py  visualization.py
source/fastcosine_core/: fastcosine_core.c  meson.build  numpyutil.h
