
py_sources = files(
    '__init__.py',
    'fastcosine.py',
    'nullmodel.py',
    'network.py',
    'config.py',
    'experiment_utilities.py',
    'preprocess_utilities.py',
    'indicator_utilities.py',
    'cohashtag_helper.py',
    'visualization.py',

)


py3.install_sources(
    py_sources,
    pure: false,
    subdir: 'coordinationz'
)
